# VideoPlayer-FFmpeg

./: build.gradle
src/androidTest/java/com/flyscale/chapter_5/: ExampleInstrumentedTest.java
src/main/: AndroidManifest.xml
src/main/cpp/: AudioOutput.cpp  CMakeLists.txt  NativeVideoPlayer.cpp  VideoDecoder.cpp  VideoDecoder.h
src/main/cpp/include/: AudioOutput.h  VideoDecoder.h  com_flyscale_chapter_5_NativeVideoPlayer.h  utils.h
src/main/java/com/flyscale/chapter_5/: MainActivity.java  NativeVideoPlayer.java
src/test/java/com/flyscale/chapter_5/: ExampleUnitTest.java
